Wed May 26 01:54:13 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: More DEBUGCALL
	  tracing added; split_root now uses level member rather than a
	  parameter.

Sun May 23 00:56:41 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: Merge split_off()
	  into add_item().

Sat May 22 01:28:58 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Another DEBUGCALL.
	* backends/quartz/quartz_table.h: Improved comments.

Fri May 21 23:17:01 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Removed unnecessary assignment which is
	  a hangover from the shared level code we removed long ago.

Fri May 21 20:31:56 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/,docs/quartzdesign.html,testsuite/btreecheck.cc:
	  Removed overwritten flag (unused as we throw an exception anyway).
	  If Btree is writable, throw DatabaseCorruptError if we detect
	  overwritten.  Make use of bool return types consistent.  Removed
	  documentation of Btree error codes (the error codes themselves
	  were removed a month ago).

Thu May 20 03:50:46 BST 2004  Olly Betts <olly@survex.com>

	* include/xapian/database.h: Remove references to sessions in doxygen
	  comments.

Thu May 20 03:44:28 BST 2004  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/database.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/muscat36/da_database.h,backends/muscat36/db_database.h,
	  backends/net/net_database.cc,backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h,common/database.h,
	  common/net_database.h: Clean up the backend interface.

Thu May 20 03:18:30 BST 2004  Olly Betts <olly@survex.com>

	* backends/database.cc,backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,backends/muscat36/,
	  backends/net/net_database.cc,backends/quartz/quartz_database.cc,