@@ -1,3 +1,9 @@
+Wed May 26 04:02:18 BST 2004  Olly Betts <olly@survex.com>
+
+	* include/om/om.h,include/xapian/errortypes.h: Removed several unused
+	  Xapian::Error subclasses (these were used by the indexer framework
+	  which we decided was a failed experiment).
+
 Wed May 26 01:54:13 BST 2004  Olly Betts <olly@survex.com>
 
 	* backends/quartz/btree.cc,backends/quartz/btree.h: More DEBUGCALL
